--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"private": true,
 	"dependencies" : {
 		"express": "3.x",
+		"paralleljs": "0.2.0",
+		"jsdom": "0.8.6",
 		"cheerio": "0.12.x"
 	}
 }
