--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.1.0",
     "paralleljs": "0.2.0",
+    "underscore": "1.5.2",
     "jsdom": "0.8.6",
     "jade": "*"
   }
