--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"dependencies" : {
 		"express": "3.x",
 		"paralleljs": "0.2.0",
+		"underscore": "1.5.2",
 		"jsdom": "0.8.6",
 		"cheerio": "0.12.x"
 	}
