--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "underscore": "1.5.2",
     "jsdom": "0.8.6",
     "nodetime": "0.8.14",
-    "jade": "*"
+    "jade": "*",
+    "async": "0.2.9"
   }
 }
